# tradex-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
scripts/: start.bat  start.sh
src/: autopilot.py  cli.py  dashboard.py  main.py
src/agents/: developer_agent.py
src/data/: database.py  quote_store.py
src/execution/: executor.py  fees.py  portfolio.py  portfolio_store.py  terminal_ui.py  trade_log.py
src/feedback/: metrics.py  prompt_tuner.py  reviewer.py
src/ingestion/: fundamental_provider.py  gdelt_provider.py  openbb_provider.py  state_builder.py  worldmonitor_provider.py  yfinance_news_provider.py
src/monitoring/: alerts.py  audit.py  health.py  logging_config.py
src/reasoning/: agent_config.py  engine.py  prompt_store.py  senior_trader.py
src/scanner/: market_scanner.py
src/state/: models.py
src/strategy/: algorithm_lab.py  ensemble.py  intraday_strategist.py  market_context.py  position_manager.py  risk_manager.py  ta_registry.py  var_calculator.py
src/web/: app.py
src/web/static/: index.html
tests/: conftest.py  test_executor.py  test_fees.py  test_gdelt_provider.py  test_metrics.py  test_portfolio.py  test_reasoning.py  test_state_models.py  test_trade_log.py
