[project]
name = "tradex-ai"
version = "1.0.0"
description = "Autonomous AI paper-trading bot with multi-agent reasoning, self-evolving strategies, and risk management"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "openbb>=4.0",
    "pandas-ta>=0.3",
    "httpx>=0.27",
    "pydantic>=2.9",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "rich>=13.0",
    "pyyaml>=6.0",
    "yfinance>=0.2",
    "streamlit>=1.30",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "black", "mypy", "ruff"]
agents = ["tradingagents"]

[project.scripts]
tradex = "src.main:main"
tradex-autopilot = "src.autopilot:main"
tradex-cli = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
